--- a/build.gradle
+++ b/build.gradle
@@ -7,9 +7,11 @@ version '1.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
+    jcenter()
 }
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     implementation 'com.google.code.gson:gson:2.8.6'
+    compile 'net.dv8tion:JDA:4.1.1_115'
 }
