--- a/build.gradle
+++ b/build.gradle
@@ -14,4 +14,6 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     implementation 'com.google.code.gson:gson:2.8.6'
     compile 'net.dv8tion:JDA:4.1.1_115'
+    compile group: 'com.google.guava', name: 'guava', version: '23.5-jre' // # or 23.5-android for the Android flavor
+
 }
